export const snapshot = {};

snapshot[`Team Delete Command - Help Text 1`] = `
stdout:
"
Usage: delete <team>

Description:

  Delete a Linear team

Options:

  -h, --help                   - Show this help.                                                     
  --move-issues  <targetTeam>  - Move all issues to another team (key, name, or ID) before deletion  
  -y, --force                  - Skip confirmation prompt                                            

"
stderr:
""
`;

snapshot[`Team Delete Command - By Name With Move Target By Name 1`] = `
stdout:
"✓ Moved 1 issue(s) to target team
✓ Successfully deleted team: OLD: Old Team
"
stderr:
""
`;

snapshot[`Team Delete Command - Move Target Equals Source 1`] = `
stdout:
""
stderr:
"✗ Failed to delete team: Cannot move issues to the same team
"
`;
